<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_continue">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="welcome_image">Welcome image</string>
    <string name="permission_required_description">This application cannot work without Location Permission</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="tap_on_my_location_button">Tap on My Location button</string>
    <string name="background_location_permission_description">Background location permission is essential to this application. Without it we will not be able to provide our service.</string>
    <string name="go_label">GO</string>
    <string name="distance">Distance</string>
    <string name="share">Share</string>
    <string name="time">Time</string>
    <string name="result">%1$s km</string>
</resources>